@startuml
skinparam classAttributeIconSize 0
hide methods
left to right direction

class Platform{
}
class Address{
  String street
  String doorNumber
  String city
}
class Freelancer {
  -String freeID
  -String name
  -String levelExp
  -String email
  -String nif
  -String iban
  -String country
}


class Task {
  -String idT
  -String description
  -Time timeDuration
  -double costHour
  -String taskCategory
  -Boolean isPayed
}

class User {
}



class TransactionExecution{
  -Data endDate
  -double delay
  -String descriptionOfQuality
  }

class Writer{
  -String fileName
  }



Freelancer "1" -- "1" Address: has >
Freelancer "1" -- "1" Writer: receives email from >

Task "1..*" -- "1" Freelancer: made by >



Platform "1" -- "1..*" Freelancer: has >
Platform "1" -- "1" Freelancer: sends email to >
Platform "1" -- "1" Writer : sends emails from >
Platform "1" -- "1..*" Organization: has



Organization "1" -- "1..*" TransactionExecution : has
Organization "1" -- "1" Collaborator: has




Collaborator "1" -- "1" Freelancer: creates >
Collaborator "1" -- "1..*" Task: creates >
Collaborator "1" -- "1" User: acts as >
Collaborator "1" -- "1" TransactionExecution: creates >


TransactionExecution "1" -- "1" Freelancer:has








@enduml

